--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
     <meta content="" name="description" />
     <meta content="" name="keywords" />
 
-    <!-- Favicons -->
-    <link href="assets/img/logo.png" rel="icon" />
-    <link href="assets/img/logo.png" rel="apple-touch-icon" />
-
     <!-- Google Fonts -->
     <link
       href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i"
@@ -32,6 +28,7 @@
       href="assets/vendor/glightbox/css/glightbox.min.css"
       rel="stylesheet"
     />
+    <link href="assets/vendor/aos/aos.css" rel="stylesheet" />
     <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet" />
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
@@ -49,7 +46,7 @@
     <header id="header">
       <div class="container">
         <h1><a href="index.html">Protactium</a></h1>
-        <h2>I'm a passionate <span>developer</span> from England</h2>
+        <h2>I'm a professional <span>developer</span></h2>
         <script>
           function openInNewTab(href) {
             Object.assign(document.createElement("a"), {
@@ -93,10 +90,10 @@
 
     <div class="credits">Designed by <a href="#">Protactium</a></div>
 
-    <!-- Vendor JS Files -->
     <script src="assets/vendor/purecounter/purecounter.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/glightbox/js/glightbox.min.js"></script>
+    <script src="assets/vendor/aos/aos.js"></script>
     <script src="assets/vendor/isotope-layout/isotope.pkgd.min.js"></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="assets/vendor/waypoints/noframework.waypoints.js"></script>
