--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section id="hero">
       <div class="hero-container" data-aos="fade-up">
         <h1>Protactium</h1>
-        <h2>I'm a professional developer, scripter & designer</h2>
+        <h2>I'm a professional roblox developer, scripter & designer</h2>
       </div>
     </section>
 
@@ -64,10 +64,10 @@
                   >
                 </h4>
                 <p class="description">
-                  The shadows is a game based off phasmophobia, it has the same
-                  quality, same design for everything but handles differently.
-                  You and your friends go to different houses, investigate the
-                  strange activities this supernatural being is causing.
+                  The shadows is a game based off phasmophobia, 
+                  of the same quality. You and your friends go to 
+                  different houses, investigate the strange activities
+                  this supernatural being is causing.
                 </p>
               </div>
             </div>
@@ -100,7 +100,7 @@
                 <i class="bi bi-journal-richtext"></i>
                 <span
                   data-purecounter-start="0"
-                  data-purecounter-end="5"
+                  data-purecounter-end="1"
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
