--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section id="hero">
       <div class="hero-container" data-aos="fade-up">
         <h1>Protactium</h1>
-        <h2>I'm a professional roblox developer, scripter & designer</h2>
+        <h2>I'm a professional developer, scripter & designer</h2>
       </div>
     </section>
 
