--- a/index.html
+++ b/index.html
@@ -70,6 +70,18 @@
                   this supernatural being is causing.
                 </p>
               </div>
+              <div class="icon-box" data-aos="fade-up">
+                <h4 class="title">
+                  <a href="https://www.roblox.com/games/17182743199"
+                    >RUCKUS RNG</a
+                  >
+                </h4>
+                <p class="description">
+                  RUCKUS RNG is a skill-based game where players
+                  roll for different weapons to fight their foes with
+                  their items they're gambled for.
+                </p>
+              </div>
             </div>
           </div>
         </div>
@@ -87,7 +99,7 @@
                 <i class="bi bi-emoji-smile"></i>
                 <span
                   data-purecounter-start="0"
-                  data-purecounter-end="100"
+                  data-purecounter-end="50"
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
@@ -100,7 +112,7 @@
                 <i class="bi bi-journal-richtext"></i>
                 <span
                   data-purecounter-start="0"
-                  data-purecounter-end="1"
+                  data-purecounter-end="2"
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
@@ -113,7 +125,7 @@
                 <i class="bi bi-code-slash"></i>
                 <span
                   data-purecounter-start="0"
-                  data-purecounter-end="500000"
+                  data-purecounter-end="30000"
                   data-purecounter-duration="1"
                   class="purecounter"
                 ></span>
@@ -148,13 +160,25 @@
                 <li>
                   <i class="bx bx-chevron-right"></i>
                   <a
-                    href="https://www.roblox.com/groups/14840706/Vapor-Development"
+                    href="https://www.roblox.com/groups/14840706"
                     >Roblox Group</a
                   >
                 </li>
                 <li>
                   <i class="bx bx-chevron-right"></i>
                   <a href="https://discord.com/invite/GVg6NMzsVb">Discord</a>
+                </li>
+              </ul>
+            </div>
+             <div class="col-lg-2 col-md-6 footer-links">
+              <h4>Polyonic</h4>
+              <ul>
+                <li>
+                  <i class="bx bx-chevron-right"></i>
+                  <a
+                    href="https://www.roblox.com/groups/33401609"
+                    >Roblox Group</a
+                  >
                 </li>
               </ul>
             </div>
