--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
                   this supernatural being is causing.
                 </p>
               </div>
+            </div>
+          </div>
+          <div class="row justify-content-center">
+            <div
+              class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0"
+            >
               <div class="icon-box" data-aos="fade-up">
                 <h4 class="title">
                   <a href="https://www.roblox.com/games/17182743199"
