--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <h2>Projects</h2>
           </div>
 
-          <div class="row no-gutters">
+          <div class="row justify-content-center">
             <div
               class="col-md-6 col-lg-3 d-flex align-items-stretch mb-5 mb-lg-0"
             >
