--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <section id="projects" class="projects">
         <div class="container">
           <div class="section-title" data-aos="fade-in" data-aos-delay="100">
-            <h2>Projects</h2>
+            <h2>ROBLOX Games</h2>
           </div>
 
           <div class="row justify-content-center">
